name:                jira2sheet
version:             0.1.0.0
synopsis:            Reads issue data from Jira and creates a spreadsheet
description:         Please see README.md
homepage:            https://github.com/berdario/jira2sheet#readme
license:             BSD3
license-file:        LICENSE
author:              Dario Bertini
maintainer:          berdario@gmail.com
copyright:
category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson
                     , cassava
                     , text
                     , safe-exceptions
                     , lens
                     , haskeline
                     , bytestring
                     , network-uri
                     , transformers
                     , logging-effect
  default-language:    Haskell2010

executable jira2sheet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jira2sheet
                     , optparse-applicative
                     , logging-effect
                     , transformers
                     , text
  default-language:    Haskell2010

test-suite jira2sheet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jira2sheet
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/berdario/jira2sheet
