name:                jira2sheet
version:             0.1.0.0
synopsis:            Reads issue data from Jira and creates a spreadsheet
description:         Please see README.md
homepage:            https://github.com/berdario/jira2sheet#readme
license:             BSD3
license-file:        LICENSE
author:              Dario Bertini
maintainer:          berdario@gmail.com
copyright:
category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson
                     , cassava
                     , text
                     , safe-exceptions
                     , lens
                     , haskeline
                     , bytestring
                     , network-uri
                     , transformers
                     , logging-effect
                     , exceptions
                     , http-conduit
                     , hoauth2
                     , mtl
                     , either
                     , unexceptionalio
                     , open-browser
                     , argon2
                     , hostname
                     , cryptonite
                     , memory
  default-language:    Haskell2010

executable jira2sheet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jira2sheet
                     , optparse-applicative
                     , logging-effect
                     , transformers
                     , text
                     , bytestring
                     , unexceptionalio
  default-language:    Haskell2010

test-suite jira2sheet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
--  ghc-options:         -rtsopts -fprof-auto -fprof-auto-calls -with-rtsopts=-K1K
  build-depends:       base
                     , jira2sheet
                     , test-fixture
                     , tasty
                     , hspec
                     , http-client
                     , http-types
                     , wreq
                     , exceptions
                     , text
                     , logging-effect
                     , network-uri
                     , bytestring
                     , aeson
                     , transformers
                     , mtl
                     , either
                     , hoauth2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/berdario/jira2sheet
